snapshots/syntax/statements/control_flow/resume/resume_preserves_whitespace.snap
---
source: vb6parse/src/syntax/statements/control_flow/resume.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ResumeStatement
      children:
        - kind: ResumeKeyword
          text: Resume
        - kind: Whitespace
          text: "    "
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
